--- a/index.html
+++ b/index.html
@@ -22,36 +22,26 @@
         <main>
             <h2>Contacts</h2>
             <ul>
-                <li><a href="https://github.com/alinaaved">GitHub</a></li>
+                <li>+7-963-947-01-38</a></li>
                 <li>alinangs@mail.ru</li>
             </ul>
             <h2>About myself</h2>
-            <div class = "about">I'm beginner programmer. Now I am a student of university, also I work in online-education company. In nearest feature I want to learn more about front-end and programming on JS. </div>
+            <div class = "about">I'm beginner programmer. Now I am a student of university, also I work in online-education company. In nearest feature I want to learn more about data-science, ml and programming on python. </div>
             <h2>Skills</h2>
             <ul>
-                <li>HTML5, CSS</li>
-                <li>JavaSkript</li>
-                <li>C++</li>
                 <li>Python</li>
+                <li>SQL</li>
+                <li>C++</li>
                 <li>Git, GitHub</li>
-                <li>Figma</li>
             </ul>
-            <h2>Code example</h2>
-            
-            <p ><pre class="code_ex">
-function multiply(a, b){<br>
-    return a * b<br>
-  }
-            </pre></p>
             <h2>Education</h2>
-            <div class = "about">RTU MIREA (specialization - Software engineering)</div>
-            <div class = "about">Rs preSchool</div>
+            <div class = "about">NUST MISIS (specialization - informatics and computer engineering)</div>
             <h2>English</h2>
-            <div class = "about">My level of English is B1.</div>
+            <div class = "about">My level of English is B2.</div>
         </main>
         <footer>
-            <div class = "foot">2022</div>
-            <div class = "foot"><a  href="https://rs.school/js/"><img class = "rs_logo"src="./assets/rs_school_js.jpg"> </a></div>
+            <div class = "foot">2023</div>
+            
         </footer>
     </div>
 </body>
